css/style.css
/* ... */
.dark {
  background-color: #0c0f15;
}
.dark .page-home .overlay {
  background-color: rgba(14, 17, 24, 0.97);
}
.dark .page-title h2 {
  color: #ffffff;
}
.dark .page-title .title-bg {
  color: rgba(70, 88, 124, 0.06);
}
.dark .section-title h3::before {
  background-color: #fff;
}
.dark h1,
.dark h2,
.dark h3,
.dark h4,
.dark h5,
.dark h6,
.dark .about-author .author-desc p {
  color: #fff;
}
.dark .switcher-body h4 {
  color: #0c0f15;
}
.dark .service-hex .st0 {
  fill: transparent;
}
.dark .service-hex:hover .st0 {
  fill: #fff;
}
.dark .testimonials .text,
.dark .btn-border {
  border-color: #1e2530;
}
/*# sourceMappingURL=style.css.map */

@media only screen and (max-width: 767px) {
  /* فقط مخفی کردن copyright */
  .page-nav .copyright {
    display: none !important;
  }

  /* ردیف کردن */
  .page-nav .flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  /* کنترل پایین صفحه */
  .page-nav {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

